--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
 
 <h2>AJAX TEST load en txt fil.</h2>
 
-<button type="button">AJAX KNAP!!!!!</button>
+<button type="button">AJAX KNAP!</button>
 <h2 id="AJAXknap"></h2>
 </body>
 </html>
